@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: "setwhen" basic edition support.
+Nicolas Weeger 2010-06-03
+
 CRE: read and write 'setwhen' quest support, no modification for now.
 Nicolas Weeger 2010-06-03
 
